--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "server": "nodemon ./bin/www"
   },
   "repository": {
     "type": "git",
@@ -21,6 +22,7 @@
     "cors": "^2.8.5",
     "express": "^4.18.1",
     "firebase": "^9.8.1",
+    "firebase-admin": "^10.2.0",
     "multer": "^1.4.4",
     "nodemon": "^2.0.16"
   }
