--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "express": "^4.18.1",
     "jsonwebtoken": "^8.5.1",
     "pg": "^8.7.3",
-    "sequelize": "^6.20.0"
+    "sequelize": "^6.20.0",
+    "xendit-node": "^1.21.3"
   },
   "devDependencies": {
     "sequelize-cli": "^6.4.1"
