--- a/package.json
+++ b/package.json
@@ -1,6 +1,15 @@
 {
   "dependencies": {
     "axios": "^0.27.2",
-    "express": "^4.18.1"
+    "bcrypt": "^5.0.1",
+    "cors": "^2.8.5",
+    "express": "^4.18.1",
+    "jsonwebtoken": "^8.5.1",
+    "pg": "^8.7.3",
+    "sequelize": "^6.20.0",
+    "supertest": "^6.2.3"
+  },
+  "devDependencies": {
+    "sequelize-cli": "^6.4.1"
   }
 }
