--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express": "^4.18.1",
     "google-auth-library": "^8.0.2",
     "jsonwebtoken": "^8.5.1",
+    "node-fetch": "^3.2.4",
     "pg": "^8.7.3",
     "sequelize": "^6.19.0"
   }
