--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "google-auth-library": "^8.0.2",
     "jsonwebtoken": "^8.5.1",
     "node-fetch": "^3.2.4",
+    "nodemailer": "^6.7.5",
     "pg": "^8.7.3",
     "sequelize": "^6.19.0"
   }
