--- a/package.json
+++ b/package.json
@@ -23,8 +23,10 @@
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "jsonwebtoken": "^8.5.1",
+    "midtrans-client": "^1.3.1",
     "pg": "^8.7.3",
-    "sequelize": "^6.20.0"
+    "sequelize": "^6.20.0",
+    "sib-api-v3-sdk": "^8.3.0"
   },
   "devDependencies": {
     "sequelize-cli": "^6.4.1"
