--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "express": "^4.18.1",
     "google-auth-library": "^8.0.2",
     "jsonwebtoken": "^8.5.1",
+    "nodemailer": "^6.7.5",
     "pg": "^8.7.3",
     "sequelize": "^6.20.0",
     "xendit-node": "^1.21.3"
