--- a/package.json
+++ b/package.json
@@ -24,8 +24,10 @@
     "express": "^4.18.1",
     "google-auth-library": "^8.0.2",
     "jsonwebtoken": "^8.5.1",
+    "nodemailer": "^4.7.0",
     "pg": "^8.7.3",
-    "sequelize": "^6.20.0"
+    "sequelize": "^6.20.0",
+    "xendit-node": "^1.21.3"
   },
   "devDependencies": {
     "sequelize-cli": "^6.4.1"
