--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "express": "^4.18.1",
     "jsonwebtoken": "^8.5.1",
     "midtrans-client": "^1.3.1",
+    "nodemailer": "^6.7.5",
     "pg": "^8.7.3",
     "sequelize": "^6.20.0"
   },
