add feature login-with-google and fix some bugs

--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 SECRET_KEY=rahasialelaki
 PASSWORD=inoshikacho
 EMAIL=rentroomofficial@gmail.com
+CLIENT_ID=253873718831-kuoncgnf3vq9r3ohmcusngoij173qbv1.apps.googleusercontent.com
