--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "jsonwebtoken": "^8.5.1",
     "nodemailer": "^6.7.5",
     "pg": "^8.7.3",
-    "sequelize": "^6.20.0"
+    "sequelize": "^6.20.0",
+    "sequelize-cli": "^6.4.1"
   }
 }
