--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Individual Project - Server",
   "main": "index.js",
   "scripts": {
+    "dev": "nodemon bin/www.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node app.js"
   },
