--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "jsonwebtoken": "^8.5.1",
+    "passport": "^0.6.0",
+    "passport-facebook": "^3.0.0",
     "pg": "^8.7.3",
     "sequelize": "^6.20.0"
   },
