--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "express": "^4.18.1",
     "jest": "^28.1.0",
     "jsonwebtoken": "^8.5.1",
+    "nodemailer": "^6.7.5",
     "pg": "^8.7.3",
     "sequelize": "^6.20.0",
     "supertest": "^6.2.3"
