--- a/.env-example
+++ b/.env-example
@@ -1,3 +1,13 @@
-secretKey = StringSecret
+secretKey =secretKey
 PORT = 3000
-authClient = xxxx.apps.googleusercontent.com
+authClient = xxxxxxx.apps.googleusercontent.com
+DATABASE_URL = localhost
+
+AUTH_CODE=1321dqwe/25133
+CLIENT_ID=12345678.apps.googleusercontent.com
+
+CLIENT_SECRET=GOCSPX-secret
+
+ACCESS_TOKEN=token
+
+REFRESH_TOKEN=1//tokenrefresh
